--- a/_posts/study/TIL/2021-08-27-21.md
+++ b/_posts/study/TIL/2021-08-27-21.md
@@ -21,6 +21,7 @@ W4D5 Part1 - Spring AOP 개념과 사용법에 대해 공부하자
 
 ### 기본 구조
 
+
 ![image](https://user-images.githubusercontent.com/71180414/131093439-92a801f6-ce51-4385-ad81-ab1fe4970362.png){:width="600"}
 
 - `(Cross Cutting) Concerns` : 기능이 중복되는 부분이다. 이 부분을 `Aspect`로 만들어 주는 것이 바로 AOP!
@@ -30,141 +31,38 @@ W4D5 Part1 - Spring AOP 개념과 사용법에 대해 공부하자
 ![aop](https://user-images.githubusercontent.com/71180414/131214118-7e3ea8c0-16db-4267-aff3-e67eaba3b0a2.png)
 
 - `Aspect` : 기존 뜻은 '관점'이지만 -> '기능'을 묶는 모듈이라고 생각하면 좋다
-- `Advice` : 기존 Concern을 Aspect 모듈에 넣으면 Advice. 즉 추가할 기능!
-- `Target` : Advice를 적용할 대상 -> 즉 적용대상 클래스/메소드임
-- `Join point` : Advice가 Target에 적용되는 지점을 뜻한다
+- `Advice` : 기존 Concern을 Aspect 모듈에 넣으면 Advice.
+- `Target` : 핵심 기능을 담고 있는 모듈. 부가기능을 부여할 대상 -> 즉 적용대상 클래스/메소드임
 - `PointCut` : Advice를 적용할 Target의 메소드를 선별하는 `정규표현식`
+- `Join point` : Advice가 Target에 적용되는 시점을 뜻한다
+
 
 <br>
 
-## AOP 적용
+## AOP 적용 - Weaving
+
+![image](https://user-images.githubusercontent.com/71180414/131141922-0d241995-2412-452a-9fc1-e94d75ae3082.png){:style="width:400px; margin-top:15px;"}
+
+- 컴파일 시점 : `AspectJ` 같은 프레임워크를 사용해 컴파일 전 소스코드를 삽입하는 방식
+- 클래스 로딩 시점 : 클래스 로딩시 Byte Code를 삽입
+- 런타임 시점 : 스프링에서 사용하는 방식으로 `Proxy` 객체를 활용한다 더 알아보자!
 
 ### Advice Join Point 분류
 
 ![image](https://user-images.githubusercontent.com/71180414/131215026-55584b2b-c625-4f6f-b2f4-2999adb1b781.png){:width="500"}
 
-- Advice를 적용할 6가지 시점이 존재한다.
-
-### Weaving
-
-![image](https://user-images.githubusercontent.com/71180414/131141922-0d241995-2412-452a-9fc1-e94d75ae3082.png){:style="width:400px; margin-top:15px;"}
-
-- Aspect가 지정된 객체의 **프록시 객체**를 생성하는 과정이다
-- 총 세가지 방법이 존재한다
-  - 컴파일 시점 : 컴파일시 소스코드를 삽입하는 방식 (`AspectJ`에서 사용)
-  - 클래스 로드 시점 : 클래스 로드시 Byte Code를 삽입하는 방식 (`AspectJ`에서 사용)
-  - 런타임 시점 : 런타임시 동적 생성하는 방식. (`Spring`에서 사용)
-    - `JDK dynamic Proxy`와 `CGLIB Proxy` 두가지 방식이 존재한다.
-    - 인터페이스가 정의되었다면 `JDK dynamic Proxy`, 없다면 `CGLIB Proxy`로 동작한다
-
-### Proxy 패턴
-
-```java
-// 기능정의
-interface Dummy {
-    void doSomething();
-}
-
-// target
-public static class DummyImpl implements Dummy{
-    @Override
-    public void doSomething(){
-        System.out.println("DO");
-    }
-}
-
-// proxy
-public static class DummyProxy implements Dummy{
-    Dummy target;
-
-    DummyProxy(Dummy target){
-        this.target = target;
-    }
-
-    @Override
-    public void doSomething(){
-        System.out.println("proxy 적용 드간다");
-        target.doSomething();
-    }
-}
-
-// client
-public static void main(String[] args){
-    Dummy target = new DummyImpl();
-    Dummy proxy = new DummyProxy(target);
-    proxy.doSomething();
-}
-```
-
-- 직접 프록시 클래스를 정의
-- target을 위한 기능 정의 인터페이스가 필요
-- 추가할 기능의 코드가 중복될 수 있다.
-
-
-### JDK Dynamic Proxy
-
-```java
-// 기능정의
-interface Dummy {
-    void doSomething();
-}
-
-// target
-public static class DummyImpl implements Dummy {
-    @Override
-    public void doSomething() {
-        System.out.println("DO");
-    }
-}
-
-// jdk dynamic proxy
-public static class DummyProxy implements InvocationHandler {
-    Dummy target;
-
-    public DummyProxy(Dummy target) {
-        this.target = target;
-    }
-
-    @Override
-    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
-        if ("doSomething".equals(method.getName())) {
-            System.out.println("proxy 적용 드간다");
-            return method.invoke(target, args);
-        }
-        return method.invoke(target, args);
-    }
-}
-
-// client
-public static void main(String[] args) {
-    Dummy target = new DummyImpl();
-    Dummy proxy = (Dummy) Proxy.newProxyInstance(
-        Example.class.getClassLoader(),
-        new Class[]{Dummy.class},
-        new DummyProxy(target)
-    );
-    proxy.doSomething();
-}
-```
-
-- Reflection을 통해 프록시 팩토리가 동적으로 프록시 객체를 생성하는 방식
-  - 인터페이스 정보만 제공해주면 인터페이스를 구현한 프록시를 생성한다
-  - Reflection을 사용하기 때문에 성능이 떨어진다
-  - 인터페이스가 반드시 필요하다.
-
-### CGLIB proxy
-
-```java
-
-```
-
-- 상속을 사용해 메소드를 재정의한 프록시 객체를 생성하는 방식
-  - Reflection을 사용하지 않고 Byte코드를 조작하기에 `JDK dynamic Proxy`보다 성능이 뛰어나다
-  - final, private 메소드는 상속할수 없기에 재정의에 제한적임
 
 <br>
 
-## Spring AOP 사용하기
+## JDK dynamic Proxy
+
+??
+
+<br>
+
+## Spring AOP 
+
+- aspectJ 어노테이션을 사용하나, 런타임 시점에서 적용됨
 
 ### 설정
 
