--- a/_posts/tech/Spring/2022-03-10-2.md
+++ b/_posts/tech/Spring/2022-03-10-2.md
@@ -13,7 +13,7 @@ toc_sticky: false
 Spring 요청의 흐름. Servlet부터 알아보자!!
 
 Spring의 기초 기술과 기술 발전과정을 쭈욱 훑어보면서 Spring Boot가 어떻게 탄생했는지를 알아보려고 한다.   
-(세 번의 포스팅에 걸쳐 알아볼 예정이다)
+(여러 번의 포스팅에 걸쳐 알아볼 예정이다. 몇개가 될지 모름 😇)
 
 ## Servlet이란
 
@@ -73,6 +73,8 @@ Spring의 기초 기술과 기술 발전과정을 쭈욱 훑어보면서 Spring 
 사실 서블릿은 Spring 동작원리를 이해하기 위한 기초 발판이였다. (!!)   
 
 다음 포스팅에서 Spring에서의 MVC 패턴이 어떻게 등장했는지에 대해 알아보도록 하겠다.
+
+- [Spring에서의 요청 흐름 2편 - MVC, JSP](/spring/3/)
 
 <br>
 
