--- a/_posts/tech/Spring/2022-03-11-4.md
+++ b/_posts/tech/Spring/2022-03-11-4.md
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-Spring MVC가 뭔지, 어떻게 동작하는지에 대해 알아보자.
+Spring MVC가 무엇인지, 그리고 필수 개념인 DispatcherServlet에 대해 알아보자~
 
 ## Spring
 
@@ -98,23 +98,18 @@ Thymeleaf를 사용하기 위해선 뷰 리졸버에 `ThymeleafViewResolver`를 
 ![image](https://user-images.githubusercontent.com/71180414/131729800-fc57caed-9da6-43a1-ba5a-12504ee07e9d.png){:style="width:70%; margin-top:15px;"}
 
 위 그림과 같이 `HandlerAdapter`에서 뷰 리졸버가 아닌 `MessageConverter`가 동작하게 된다.   
-분명 메시지 컨버터 적용하기를 [데브코스](https://hanjo8813.github.io/til/27/)에서 배웠었는데, 너무 어려웠어서 까먹었다...   
+분명 메시지 컨버터 적용하기를 [데브코스](/til/27)에서 배웠었는데, 너무 어려웠어서 까먹었다...   
 
 <br>
 
 ## 정리
 
-사용자 요청의 동작 흐름을 처음부터 끝까지 그림으로 나타내면 다음과 같다.   
-(Spring Boot를 기준으로 하였음)
+이제 서블릿 컨테이너를 넘어 스프링 컨테이너의 영역까지 들어오게 되었다.   
+이번 포스팅에서는 간단히 DispatcherServlet의 동작에 집중해서 살펴보았는데, 사실 응답을 주기 전에 스프링 컨테이너에서 일어나는 특별한 동작들이 있다.   
+(스프링 배움의 길은 끝도없다 ... 😇)
 
-![](https://user-images.githubusercontent.com/71180414/157896029-43bf3091-18bc-4313-a25b-0d2f5bcf0859.png)
+다음 포스팅에서는 스프링 컨테이너의 시작, Interceptor에 대해 알아보도록 하겠다.
 
-
-여기까지 Servlet부터 시작해서 Spring MVC까지 스프링의 동작원리에 대해 살펴보았다.   
-물론 Spring Boot가 이 모든것을 처리해주긴 하지만, 개발하다보니 Spring의 기초를 잘 아는것이 매우 중요하다는 것을 맨날 느낀다.   
-그래서 꾸준히 Spring 프레임워크에 대해 공부하고, 포스팅해나갈 예정이다.
-
-- [Spring에서의 요청 흐름 1편 - Servlet](https://hanjo8813.github.io/spring/2/)
-- [Spring에서의 요청 흐름 2편 - MVC, JSP](https://hanjo8813.github.io/spring/3/)
+- [Spring에서의 요청 흐름 4편 - Interceptor](/spring/5)
 
 <br>
