--- a/_posts/study/CS/2022-03-02-29.md
+++ b/_posts/study/CS/2022-03-02-29.md
@@ -1,14 +1,15 @@
 ---
-title:  "Spring 기초 개념"
-date: 2022-03-09
-categories: 
-  - Spring
+title:  "[Spring] 스프링 기초 개념"
+date: 2022-03-02
+categories:
+  - CS
 
 # 고정값
 classes: wide
 toc: false
 toc_sticky: false
 ---
+
 
 Spring 기초 개념 다시 정리 (DI, IoC 등)
 
