--- a/_posts/tech/Spring/2022-03-23-7.md
+++ b/_posts/tech/Spring/2022-03-23-7.md
@@ -401,7 +401,7 @@ public class ServiceAspect {
 
 ## 정리
 
-위 실습코드는 [Github](https://github.com/hanjo8813/Spring_Practice/tree/master/spring-study/practice-all-flow)에 업로드 되어있다.
+위 실습코드는 [Github](https://github.com/hanjo8813/Spring_Practice/tree/master/spring-study/practice-all-flow){:target="_blank"}에 업로드 되어있다.
 
 이번 실습을 마지막으로 **Spring에서의 요청 흐름**을 모두 알아보았다. 
 
