이미지 오류 fix

--- a/_posts/study/CS/2022-01-05-2.md
+++ b/_posts/study/CS/2022-01-05-2.md
@@ -23,7 +23,7 @@ toc_sticky: false
 
 ## 구조
 
-<img width="353" alt="image" src="https://user-images.githubusercontent.com/71180414/148102183-95b18c4b-652c-459f-82a8-1552b8535121.png">
+<img width="353" alt="image" src="https://user-images.githubusercontent.com/71180414/148102183-95b18c4b-652c-459f-82a8-1552b8535121.png"/>
 
 - `text` : 컴파일된 일반 코드가 존재하는 영역
 - `data` : 전역 변수나 초기화된 데이터가 존재하는 영역
@@ -34,7 +34,7 @@ toc_sticky: false
 
 ## 프로세스 상태
 
-<img width="600" alt="image" src="https://user-images.githubusercontent.com/71180414/148102682-a8eddf76-cdb9-4547-9b4e-3bc7b3677ba5.png">
+<img width="600" alt="image" src="https://user-images.githubusercontent.com/71180414/148102682-a8eddf76-cdb9-4547-9b4e-3bc7b3677ba5.png"/>
 
 
 - `생성`(new) : 프로세스가 생성된 상태
@@ -70,7 +70,7 @@ toc_sticky: false
 
 ### 구조
 
-<img width="600" alt="image" src="https://user-images.githubusercontent.com/71180414/148107171-40e6b1ea-5775-48f5-925a-1f210988aa8b.png">
+<img width="600" alt="image" src="https://user-images.githubusercontent.com/71180414/148107171-40e6b1ea-5775-48f5-925a-1f210988aa8b.png"/>
 
 - PCB에는 프로세스의 여러 정보를 저장하고 있음
 - 운영체제는 PCB에 빠르게 접근하기 위해 **프로세스 테이블**을 사용한다
