--- a/_posts/study/CS/2022-01-17-5.md
+++ b/_posts/study/CS/2022-01-17-5.md
@@ -38,7 +38,7 @@ toc_sticky: false
 
 - 프로세스를 **고정 분할** 기법을 사용하여 일정 크기의 페이지로 잘라 메모리에 적재하는 방식
 
-<img width="700" alt="image" src="https://user-images.githubusercontent.com/71180414/149677880-7583f98f-88bc-486e-aeaa-f014183e9c12.png">
+<img width="700" alt="image" src="https://user-images.githubusercontent.com/71180414/149677880-7583f98f-88bc-486e-aeaa-f014183e9c12.png"/>
 
 
 - 가상 메모리와 물리 메모리 영역의 주소 공간을 동일한 크기로 나눈다
@@ -50,7 +50,7 @@ toc_sticky: false
 - 페이지와 프레임은 **프로세스 페이지 테이블**을 사용하여 매핑한다
 - 각 프로세스는 자신만의 페이지 테이블을 가진다.
 
-<img width="364" alt="image" src="https://user-images.githubusercontent.com/71180414/149678243-84ff2f10-74a6-4169-b1ff-1598a5e41042.png">
+<img width="364" alt="image" src="https://user-images.githubusercontent.com/71180414/149678243-84ff2f10-74a6-4169-b1ff-1598a5e41042.png"/>
 
 - 페이지 테이블은 배열이라고 생각하면 된다
     - 인덱스가 페이지 번호이고 배열의 값이 프레임 번호
@@ -60,7 +60,7 @@ toc_sticky: false
 
 ## 세그먼테이션 기법
 
-<img width="700" alt="image" src="https://user-images.githubusercontent.com/71180414/149679442-6fb45e66-002d-4d72-9b59-23be57410452.png">
+<img width="700" alt="image" src="https://user-images.githubusercontent.com/71180414/149679442-6fb45e66-002d-4d72-9b59-23be57410452.png"/>
 
 - 프로세스를 **가변 분할** 기법을 사용하여 가변 영역인 세그먼트로 잘라 메모리에 적재하는 방식
 - **세그먼트 테이블**을 사용한다
@@ -92,7 +92,7 @@ toc_sticky: false
 
 ### 원리
 
-<img width="310" alt="image" src="https://user-images.githubusercontent.com/71180414/149810180-8cdc27a7-3986-4ee5-95cc-65c96c91b7db.png">
+<img width="310" alt="image" src="https://user-images.githubusercontent.com/71180414/149810180-8cdc27a7-3986-4ee5-95cc-65c96c91b7db.png"/>
 
 - 페이지가 실제로 물리메모리에 적재되었는지의 여부는 페이지 테이블을 통해 판단한다.
 - Valid-Invalid Bit를 활용
@@ -154,109 +154,5 @@ toc_sticky: false
 
 - **참조 횟수가 가장 많은 페이지를 교체**
 - 가장 많이 사용된 페이지는 앞으로 사용되지 않을것이라는 가정
-
-
-<br>
-
-## 예상 질문
-
-<br>
-
-<details>
-    <summary><b>가상메모리에 대해 설명해주세요</b></summary>
-    <br>
-    가상메모리란 물리적 메모리 용량의 한계를 극복하기 위한 기술입니다.<br>
-    일반적으로 운영체제의 물리메모리 용량보다 큰 메모리를 가진 프로세스는 실행이 불가능합니다.<br>
-    가상메모리를 사용하게 되면 프로세스 실행에 필요한 일부만 메모리에 로드하고 나머지는 디스크 영역에 적재합니다.<br>
-    이로써 프로세스 전체가 물리메모리에 존재하는 것처럼 수행되고, 제한된 메모리보다 큰 프로세스를 동시실행할 수 있도록 합니다.
-</details>
-
-<br>
-
-<details>
-    <summary><b>페이징 기법에 대해 설명해주세요</b></summary>
-    <br>
-    페이징 기법은 프로세스를 고정분할 기법을 사용하여 일정 크기의 페이지로 잘라 메모리에 적재하는 가상메모리 관리 기법입니다.<br>
-    이때 가상메모리를 분할한 블록을 페이지라 하고, 물리메모리를 분할한 블록을 프레임이라고 합니다.<br>
-    페이지와 프레임은 프로세스 페이지 테이블을 사용하여 매핑됩니다.<br>
-    모든 프로세스는 프로세스 페이지 테이블을 가지며 페이지와 프레임의 주소 정보를 저장합니다.
-</details>
-
-<br>
-
-<details>
-    <summary><b>세그먼테이션 기법에 대해 설명해주세요</b></summary>
-    <br>
-    세그먼테이션 기법은 프로세스를 가변분할 기법을 사용하여 가상메모리를 메모리에 관리하는 기법입니다.<br>
-    가상메모리는 가변 영역인 세그먼트로 분할되며, 세그먼트 테이블을 통해 관리됩니다.<br>
-    세그먼트 테이블은 세그먼트 번호를 저장하는 인덱스와, 물리메모리 시작 주소를 저장하는 base, 그리고 세그먼트 크기를 저장하는 limit으로 이루어져 있습니다.
-</details>
-
-<br>
-
-<details>
-    <summary><b>페이징과 세그먼테이션 기법을 비교해주세요</b></summary>
-    <br>
-    페이징 기법은 고정분할 방식을 사용하여 외부단편화를 방지하지만, 관리해야하는 페이지 테이블의 메모리 크기가 너무 커지게 됩니다.<br>
-    반면 세그먼테이션 기법은 가변분할 방식을 사용하여 내부단편화를 방지하고 데이터 공유에 유리하지만 외부단편화가 발생하는 단점이 있습니다.<br>
-    이와 같은 한계를 극복하기 위해 두 기법을 혼용하여 세그먼트를 페이징 기법으로 나누는 방식을 사용하게 됩니다.
-</details>
-
-<br>
-
-<details>
-    <summary><b>요구 페이징에 대해 설명해주세요</b></summary>
-    <br>
-    요구 페이징이란 초기에는 필요한 페이지만을 메인메모리에 적재하고, 프로세스 실행중에 실제로 필요한 페이지를 적재하는 기법입니다.<br>
-    이로써 메모리 공간을 절약할 수 있고, 프로세스의 응답 속도가 향상되는 장점을 가집니다.<br>
-    하지만 페이지 부재가 발생하는 단점도 존재합니다.
-</details>
-
-<br>
-
-<details>
-    <summary><b>페이지 부재에 대해 설명해주세요</b></summary>
-    <br>
-    페이지 부재란 프로세스에게 필요한 페이지가 메인메모리의 프레임 공간에 없을 때 발생하게 됩니다.<br>
-    페이지 부재가 발생하면 메인메모리에 필요한 페이지를 가져와야 하는데, 만약 프레임 공간이 부족하다면 특정 프레임을 다시 디스크 스왑영역으로 내보내야 합니다.<br>
-    이 때 페이지 교체 알고리즘을 사용하여 적절한 프레임을 내보내게 되고, 페이지 테이블에서 가상메모리 주소를 확인 후 필요한 페이지를 메민메모리에 가져오게 됩니다.
-</details>
-
-<br>
-
-<details>
-    <summary><b>페이지 교체 알고리즘에 대해 설명해주세요</b></summary>
-    <br>
-    페이지 부재가 발생하여 페이지를 가져올 메인메모리의 프레임 공간이 부족할 경우 프레임을 교체해야하는데, 이 때 가장 적절한 프레임을 선택하는 알고리즘입니다.<br>
-    페이지 교체 알고리즘의 종류로는 FIFO, LRU, NRU 등이 있습니다.
-</details>
-
-<br>
-
-<details>
-    <summary><b>FIFO에 대해 설명해주세요</b></summary>
-    <br>
-    가장 먼저 들어온 페이지를 교체하는 알고리즘입니다.<br>
-    페이지가 들어온 순서대로 저장해야하기 때문에 큐로 구현이 가능합니다.
-</details>
-
-<br>
-
-<details>
-    <summary><b>LRU에 대해 설명해주세요</b></summary>
-    <br>
-    가장 오랫동안 사용하지 않은 페이지를 교체하는 알고리즘입니다.<br>
-    큐로 구현이 가능하고 페이지의 사용시간을 지속적으로 기록해야하기 때문에 큰 오버헤드가 발생하는 단점이 있습니다.
-</details>
-
-<br>
-
-<details>
-    <summary><b>NRU에 대해 설명해주세요</b></summary>
-    <br>
-    최근에 사용하지 않은 페이지를 교체하는 알고리즘입니다.<br>
-    LRU와 비슷하게 동작하고, 적은 오버헤드로 적절한 성능을 낼 수 있습니다.<br>
-    참조비트와 변형비트가 사용하여 페이지 참조와 수정을 기록하여 교체 우선순위를 결정합니다.
-</details>
 
 <br>
