--- a/_posts/study/CS/2022-01-24-9.md
+++ b/_posts/study/CS/2022-01-24-9.md
@@ -27,7 +27,7 @@ HTTP 프로토콜에 대해 알아보자
 
 ## HTTP 메시지 구조
 
-<image width="500" src="https://user-images.githubusercontent.com/71180414/150716761-82a9fbee-faaf-49fe-976d-4226bfd52c35.png">
+<image width="500" src="https://user-images.githubusercontent.com/71180414/150716761-82a9fbee-faaf-49fe-976d-4226bfd52c35.png"/>
 
 ### Start Line 
 ```
