--- a/_posts/study/CS/2022-01-26-11.md
+++ b/_posts/study/CS/2022-01-26-11.md
@@ -33,11 +33,11 @@ HTTPS에 대해 알아보자
 - 클라이언트 <-> 서버간 통신에는 대칭키 사용
 - 인증기관 CA(Certificate Authority)와의 통신에서 비대칭키 방식 사용
 
-<image width="500" src="https://user-images.githubusercontent.com/71180414/151098608-68f87c2b-3a90-4941-8606-34ff4f649869.png">
+<image width="500" src="https://user-images.githubusercontent.com/71180414/151098608-68f87c2b-3a90-4941-8606-34ff4f649869.png"/>
 
-<image width="500" src="https://user-images.githubusercontent.com/71180414/151098879-ec860da7-31a1-4973-93fc-559bd8f5875d.png">
+<image width="500" src="https://user-images.githubusercontent.com/71180414/151098879-ec860da7-31a1-4973-93fc-559bd8f5875d.png"/>
 
-<image width="500" src="https://user-images.githubusercontent.com/71180414/151098911-60338d51-a052-49b9-a6ba-92702633a7b3.png">
+<image width="500" src="https://user-images.githubusercontent.com/71180414/151098911-60338d51-a052-49b9-a6ba-92702633a7b3.png"/>
 
 
 ### 통신방법
@@ -49,7 +49,7 @@ HTTPS에 대해 알아보자
 
 ### SSL Handshake
 
-<image width="700" src="https://user-images.githubusercontent.com/71180414/151099742-fe581366-2640-48b3-844b-1809983669ab.png">
+<image width="700" src="https://user-images.githubusercontent.com/71180414/151099742-fe581366-2640-48b3-844b-1809983669ab.png"/>
 
 1. 우선 3-way handshake 과정을 거치고, 브라우저는 서버가 https를 사용하고 있다는 것을 인지함
 2. ClientHello : 따라서 브라우저가 사용하는 암호화 방식을 보내고 인증서 요구
