--- a/_posts/study/CS/2022-01-27-13.md
+++ b/_posts/study/CS/2022-01-27-13.md
@@ -40,7 +40,7 @@ CORS에 대해 알아보자
     - `Content-Type Header` : application/x-www-form-urlencoded, multipart/form-data, text/plain
 - Content-Type이 json일 경우 단순요청이 아니므로, Rest API에서 단순요청이 거의 사용되지 않음
 
-<image width="600" src="https://user-images.githubusercontent.com/71180414/131894207-18a22b10-0ed5-4e8a-8254-3e9c7a310a4a.png">
+<image width="600" src="https://user-images.githubusercontent.com/71180414/131894207-18a22b10-0ed5-4e8a-8254-3e9c7a310a4a.png"/>
 
 1. 클라이언트에서 서버로 요청
     - 브라우저는 Cross-Origin 요청인지 확인하고, 맞다면 `Origin` 헤더를 추가함
@@ -52,7 +52,7 @@ CORS에 대해 알아보자
 - 브라우저에서는 단순요청이 아닌 경우 예비요청을 통해 먼저 CORS를 판단하고 실제 요청을 보냄
     - 예비요청은 OPTIONS 메소드로 보낸다
 
-<image width="600" src="https://user-images.githubusercontent.com/71180414/131888677-4b4b38a8-b3c5-411c-bfbe-e479ad36c17c.png">
+<image width="600" src="https://user-images.githubusercontent.com/71180414/131888677-4b4b38a8-b3c5-411c-bfbe-e479ad36c17c.png"/>
 
 1. 클라이언트에서 서버로 요청
     - 브라우저는 Cross-Origin 요청인지 확인하고, 맞다면 `Origin` 헤더를 추가함
