--- a/_posts/study/CS/2022-03-03-31.md
+++ b/_posts/study/CS/2022-03-03-31.md
@@ -185,14 +185,14 @@ JPA 기초 개념 다시 정리하기
 
 ## 준영속 상태
 
-<img width="432" alt="image" src="https://user-images.githubusercontent.com/71180414/159597395-396cf9e4-bac7-4aa8-b1c4-6466c05acb0a.png">
+<img width="432" alt="image" src="https://user-images.githubusercontent.com/71180414/159597395-396cf9e4-bac7-4aa8-b1c4-6466c05acb0a.png"/>
 
 - 영속성 컨텍스트는 Service와 Repository의 비즈니스 계층에서만 살아있음
 - 만약 Controller 계층으로 엔티티를 반환하면 해당 엔티티는 준영속 상태가 됨 -> 프록시 초기화 못함
 
 ### OSIV
 
-<img width="413" alt="image" src="https://user-images.githubusercontent.com/71180414/159623935-2f54b604-23f6-416d-b41d-4f42573ff952.png">
+<img width="413" alt="image" src="https://user-images.githubusercontent.com/71180414/159623935-2f54b604-23f6-416d-b41d-4f42573ff952.png"/>
 
 - Open Session In View
 - 트랜잭션 시작시점을 필터부분으로 옮겨서 영속성 컨텍스트의 생존범위를 늘려버리는 방법
@@ -201,7 +201,7 @@ JPA 기초 개념 다시 정리하기
 
 ### Spring OSIV
 
-<img width="422" alt="image" src="https://user-images.githubusercontent.com/71180414/159624290-28468f0b-4ed9-4917-b4d2-c75fc80e363b.png">
+<img width="422" alt="image" src="https://user-images.githubusercontent.com/71180414/159624290-28468f0b-4ed9-4917-b4d2-c75fc80e363b.png"/>
 
 - 영속성 컨텍스트는 계속 살아있지만 트랜잭션은 비즈니스 계층에서만 발생
     - 따라서 비즈니스 계층에서만 flush(수정)가능
