--- a/_posts/study/CS/2022-01-04-1.md
+++ b/_posts/study/CS/2022-01-04-1.md
@@ -48,7 +48,7 @@ toc_sticky: false
     
 ## 구조
 
-<img width="376" alt="image" src="https://user-images.githubusercontent.com/71180414/148101477-45da395b-e460-4c96-8675-660d0af80578.png">
+<img width="376" alt="image" src="https://user-images.githubusercontent.com/71180414/148101477-45da395b-e460-4c96-8675-660d0af80578.png"/>
 
 ### User mode
 
