--- a/_posts/study/CS/2022-01-06-3.md
+++ b/_posts/study/CS/2022-01-06-3.md
@@ -29,7 +29,7 @@ toc_sticky: false
 
 ### 구조
 
-<img width="600" src="https://user-images.githubusercontent.com/71180414/148265309-db94d90a-58e0-45cf-ae40-6d86ca8710fc.png">
+<img width="600" src="https://user-images.githubusercontent.com/71180414/148265309-db94d90a-58e0-45cf-ae40-6d86ca8710fc.png"/>
 
 - 스레드는 프로세스 내에서 코드, 데이터, 힙 영역을 공유한다.
 - 스택 영역과 레지스터은 각 스레드마다 따로 할당 받는다.
