--- a/_posts/study/CS/2022-01-21-8.md
+++ b/_posts/study/CS/2022-01-21-8.md
@@ -13,7 +13,7 @@ toc_sticky: false
 IP 주소에 대해 알아보자
 
 
-<image width="600" src="https://user-images.githubusercontent.com/71180414/150460866-44f171c6-5340-40bf-a884-0351e9eec992.png">
+<image width="600" src="https://user-images.githubusercontent.com/71180414/150460866-44f171c6-5340-40bf-a884-0351e9eec992.png"/>
 
 ## IPv4
 
@@ -27,7 +27,7 @@ IP 주소에 대해 알아보자
 - **서브넷마스크** : 호스트 영역과 네트워크 영역을 구분하는 구분자. 255와 0을 사용함
     - 서브네팅으로 분할 후 서브넷마스크로 각 영역을 표시해주는 것
 
-<image width="600" src="https://user-images.githubusercontent.com/71180414/150463537-1a2683a9-43a6-4fa3-b94b-e44c4cc8d7ce.png">
+<image width="600" src="https://user-images.githubusercontent.com/71180414/150463537-1a2683a9-43a6-4fa3-b94b-e44c4cc8d7ce.png"/>
 
 <br>
 
