카테고리 수정

--- a/_posts/record/review/2021-08-08-1.md
+++ b/_posts/record/review/2021-08-08-1.md
@@ -1,8 +1,8 @@
 ---
-title:  "졸업요건 검사 사이트 Please Graduate 회고"
+title:  "졸업요건 검사 사이트 PleaseGraduate를 운영하며.."
 date: 2021-08-08
 categories:
-  - project
+  - review
 
 # 고정값
 classes: wide
@@ -14,13 +14,14 @@ toc_sticky: false
 
 ## 처음해보는 회고
 
-애증의 Please Graduate ... 최종 배포까지 많은 고난이 함께했기에 내가 느꼈던 점들을 포스팅해보려 한다.<br>
+애증의 Please Graduate ... 지금까지 운영하며 많은 고난이 함께했기에 내가 느꼈던 점들을 포스팅해보려 한다.<br>
 글을 쓰는 재능이 없어서 걱정이지만 ㅜ 내가 가장 열정적으로 개발했던 프로젝트의 역사를 써보고 싶어서...ㅋㅋ<br>
 그냥 의식의 흐름대로 써봐야겠다 🤯
 
 ## 프로젝트의 시작
 
 우선 Please Graduate 사이트는 나 혼자 시작한 프로젝트가 아니다.<br>
+
 이 프로젝트는 학교 21년 1월 계절학기 프로그램인 `창의학기제`에서부터 시작됐다.<br>
 창의학기제는 동기 두명과 후배 두명, 그리고 나까지 총 5명이서 3주간 자유 주제로 뭐든지 만들어 내는 프로그램이다.<br>
 3주라는 기간이 너무 애매해서 다 같이 머리를 꽁꽁 싸매고 어떤 프로젝트를 해볼까 고민하다가 한 후배가 아이디어를 냈다.<br>
