--- a/_posts/study/CS/2022-01-17-5.md
+++ b/_posts/study/CS/2022-01-17-5.md
@@ -34,12 +34,38 @@ toc_sticky: false
 
 <br>
 
+## 메모리 분할 기법
+
+### 고정 분할
+
+- 메모리 공간을 고정된 크기로 분할
+- 비연속 메모리 분할 : 한 프로세스가 분산배치됨
+- 내부단편화 발생
+    - 메모리의 분할 크기보다 작은 프로세스가 적재되면 공간 낭비
+    - 적절한 메모리 분할 크기를 선택해야한다
+
+### 가변 분할
+
+- 메모리 공간을 프로세스 크기에 맞게 분할
+- 연속 메모리 분할 : 한 프로세스가 연속된 공간에 배치됨
+- 비어있는 메모리 공간이 여러개일 경우 어디에 배치할지 선택해야한다
+    - 최초적합 : 가장 먼저 발견되는 곳에 배치
+    - 최적적합 : 빈공간이 가장 적게 생기는 곳에 배치
+    - 최악적합 : 빈공간이 가장 크게 생기는 곳에 배치
+    - 최초 == 최적 > 최악 (랜덤하게 넣나 최적으로 넣나 비슷하다는 결론)
+- 외부단편화 발생
+    - 메모리의 할당과 해제가 반복되면 메모리에 빈공간이 생긴다
+    - 빈공간의 메모리 합계가 프로세스보다 커도, 연속된 메모리가 아니라서 올리지 못하게 됨
+- 외부단편화 해결
+    - Compaction : 빈 공간을 연속된 공간으로 압축시키는 방법
+
+<br>
+
 ## 페이징 기법
 
 - 프로세스를 **고정 분할** 기법을 사용하여 일정 크기의 페이지로 잘라 메모리에 적재하는 방식
 
-<img width="700" alt="image" src="https://user-images.githubusercontent.com/71180414/149677880-7583f98f-88bc-486e-aeaa-f014183e9c12.png"/>
-
+<img width="700" alt="image" src="https://user-images.githubusercontent.com/71180414/149677880-7583f98f-88bc-486e-aeaa-f014183e9c12.png">
 
 - 가상 메모리와 물리 메모리 영역의 주소 공간을 동일한 크기로 나눈다
     - 가상 메모리 블록 -> **페이지**
@@ -50,7 +76,7 @@ toc_sticky: false
 - 페이지와 프레임은 **프로세스 페이지 테이블**을 사용하여 매핑한다
 - 각 프로세스는 자신만의 페이지 테이블을 가진다.
 
-<img width="364" alt="image" src="https://user-images.githubusercontent.com/71180414/149678243-84ff2f10-74a6-4169-b1ff-1598a5e41042.png"/>
+<img width="364" alt="image" src="https://user-images.githubusercontent.com/71180414/149678243-84ff2f10-74a6-4169-b1ff-1598a5e41042.png">
 
 - 페이지 테이블은 배열이라고 생각하면 된다
     - 인덱스가 페이지 번호이고 배열의 값이 프레임 번호
@@ -60,7 +86,7 @@ toc_sticky: false
 
 ## 세그먼테이션 기법
 
-<img width="700" alt="image" src="https://user-images.githubusercontent.com/71180414/149679442-6fb45e66-002d-4d72-9b59-23be57410452.png"/>
+<img width="700" alt="image" src="https://user-images.githubusercontent.com/71180414/149679442-6fb45e66-002d-4d72-9b59-23be57410452.png">
 
 - 프로세스를 **가변 분할** 기법을 사용하여 가변 영역인 세그먼트로 잘라 메모리에 적재하는 방식
 - **세그먼트 테이블**을 사용한다
@@ -92,7 +118,7 @@ toc_sticky: false
 
 ### 원리
 
-<img width="310" alt="image" src="https://user-images.githubusercontent.com/71180414/149810180-8cdc27a7-3986-4ee5-95cc-65c96c91b7db.png"/>
+<img width="310" alt="image" src="https://user-images.githubusercontent.com/71180414/149810180-8cdc27a7-3986-4ee5-95cc-65c96c91b7db.png">
 
 - 페이지가 실제로 물리메모리에 적재되었는지의 여부는 페이지 테이블을 통해 판단한다.
 - Valid-Invalid Bit를 활용
@@ -154,5 +180,6 @@ toc_sticky: false
 
 - **참조 횟수가 가장 많은 페이지를 교체**
 - 가장 많이 사용된 페이지는 앞으로 사용되지 않을것이라는 가정
+
 
 <br>
