--- a/_posts/study/CS/2022-01-25-10.md
+++ b/_posts/study/CS/2022-01-25-10.md
@@ -1,5 +1,5 @@
 ---
-title:  "[네트워크] HTTP 1.1, HTTP 2.0, HTTP 3"
+title:  "[네트워크] HTTP 역사"
 date: 2022-01-25
 categories:
   - CS
@@ -12,33 +12,52 @@ toc_sticky: false
 
 버전별 HTTP 프로토콜에 대해 알아보자
 
+## HTTP/0.9, 1,0
 
-![image](https://user-images.githubusercontent.com/71180414/150906600-79dcc269-869d-4849-b078-6c1dafa29b21.png)
+- TCP 기반
+- HTTP 헤더 도입으로 HTML 이외 다른 문서 타입도 지원
 
-## HTTP 1.1
+<img width="190" alt="image" src="https://user-images.githubusercontent.com/71180414/162596619-4e305a8a-ed56-45e5-8435-6e9e4874d978.png">
 
-- TCP 기반임
-    - http1.1은 연결당 하나의 요청을 처리함 (stop & wait)
-    - 동시전송 불가능, 요청-응답 처리가 순차적임
-- http에 포함된 데이터가 커질수록 대기시간이 길어짐
+### 문제점 1 : RTT 증가
 
-### HOLB(Head Of Line Blocking) 
+- 하나의 연결에서 요청-응답 한쌍밖에 처리하지 못함
+- 요청별로 커넥션을 생성하고 이때마다 3-way Handshaking이 발생함
+
+### 문제점 2 : 동시전송 불가
+
+- 커넥션당 하나의 요청밖에 처리하지 못하니 당연히 동시전송도 불가함
+
+<br>
+
+## HTTP/1.1
+
+- TCP 기반
+- 이전 HTTP 버전 문제를 해결함
+
+<img width="373" alt="image" src="https://user-images.githubusercontent.com/71180414/162596628-7dadeedf-ac30-4eeb-97a3-a7b4de574f2b.png">
+
+### 해결 1 : Connection Keep-alive
+
+- Persistent Connection이라고도 함
+- RTT 증가 문제를 해결함
+    - TCP 커넥션을 한번 열고 재사용하여 3-way Handshaking 과정을 줄인다
+    - 지정한 시간동안 TCP 커넥션을 닫지 않는다
+
+### 해결 2 : Pipelining
+
+- 동시전송 불가 문제를 해결
+- 요청에 대한 응답을 기다리지 않고 여러개의 요청을 보내는 방식
+
+### 문제점 1 : HOLB(Head Of Line Blocking) 
+
+<img width="332" alt="image" src="https://user-images.githubusercontent.com/71180414/162596543-5ed84a44-f0cf-4bb2-a63b-b1fc76e60ea1.png">
 
 - 패킷이 순서대로 도착해야하므로 패킷이 도착할때까지 그 이후 패킷은 전송되지 못하는 것
-    - http1.1은 동시전송이 불가능하기 때문
 - 또한 패킷이 정상적으로 도착하지 못할때마다 재요청이 일어남
     - 재요청 시간만큼 통신이 지연됨
-- **해결방법**
-    - `HTTP Pipelining` : 요청에 대한 응답을 기다리지 않고 여러개의 요청을 보낸다.
 
-### RTT(Round Trip Time) 증가
-
-- http1.1은 TCP 기반이므로 요청별로 커넥션을 생성하고, 이때마다 3-way Handshaking이 발생함
-    - 불필요한 RTT증가 및 네트워크 지연으로 성능 저하
-- **해결방법**
-    - `Connection Keep-alive` : TCP 커넥션을 재사용하는 것
-
-### 무거운 Header 구조
+### 문제점 2 : 무거운 Header 구조
 
 - http1.1은 다수의 http 요청이 발생할때마다 중복된 헤더값을 전송하게 됨
     - 쿠키 정보도 헤더에 담겨 요청되므로 헤더가 매우 무거워짐
@@ -47,16 +66,31 @@ toc_sticky: false
 
 <br>
 
-## HTTP 2.0
+## HTTP/2.0
 
 - HTTP1.1의 문제를 해결하기 위해 고안됨
 
-### Multiplexing (Multiplexed Streams)
+![image](https://user-images.githubusercontent.com/71180414/150906600-79dcc269-869d-4849-b078-6c1dafa29b21.png)
 
-- http1.1의 RTT 및 HOLB 문제를 해결하기 위한 기술
-- 한번의 요청만으로 모든 데이터를 전송한다.
-- 한 커넥션으로 동시에 여러개의 메시지를 주고받을 수 있으며, 응답은 순서에 상관없이 스트림으로 주고받음
-    - http1.1의 `HTTP Pipelining`과 `Connection Keep-alive`을 개선함
+### Multiplexing
+
+- HOLB 문제를 해결
+- 바이너리 프레임 계층을 사용
+    - 파싱, 전송속도 증가 / 오류발생 가능성 낮춤
+- 한번의 요청만으로 모든 데이터를 전송
+    - 응답은 순서에 상관없이 스트림으로 주고받음
+    - http1.1의 `Pipelining`과 `Connection Keep-alive`을 개선
+
+### Stream Prioritization
+
+- 리소스간 우선 순위를 설정할 수 있음
+    - ex) 렌더링을 위해서 이미지 파일보다 CSS 파일의 우선순위가 높아야함
+
+### Server Push
+
+- 서버는 요청하지 않은 리소스도 맘대로 보내줄 수 있음
+- HTTP/1.1은 클라이언트가 HTML 응답을 받은 후 이를 분석해 CSS, JS 등을 재요청
+- Server Push를 사용하면 서버가 알아서 보내줌
 
 ### Header Compression
 
@@ -88,4 +122,4 @@ toc_sticky: false
 
 <br>
 
-참고 : https://kooku.netlify.app/web/http1.1-vs-http2/#stream-prioritization
+참고 : https://kooku.netlify.app/web/http1.1-vs-http2/
