--- a/_posts/study/CS/2022-01-24-9.md
+++ b/_posts/study/CS/2022-01-24-9.md
@@ -88,7 +88,7 @@ HTTP/1.1 404 Not Found
 
 - 데이터를 교체 및 생성 (덮어씌우기)
 - POST와 차이점
-    - 여러번 요청했을 때 POST는 데이터를 계속 생성하지만, PUT은 한번 생성 후 계속 교체함
+    - 여러번 요청했을 때 POST는 데이터를 계속 생성하지만, PUT은 한번만 생성 후 계속 교체함
     - 즉 PUT은 멱등성을 가진다.
 
 ### GET
