--- a/_posts/study/CS/2022-01-25-10.md
+++ b/_posts/study/CS/2022-01-25-10.md
@@ -37,9 +37,8 @@ toc_sticky: false
 
 <img width="373" alt="image" src="https://user-images.githubusercontent.com/71180414/162596628-7dadeedf-ac30-4eeb-97a3-a7b4de574f2b.png">
 
-### 해결 1 : Connection Keep-alive
+### 해결 1 : Persistent Connection
 
-- Persistent Connection이라고도 함
 - RTT 증가 문제를 해결함
     - TCP 커넥션을 한번 열고 재사용하여 3-way Handshaking 과정을 줄인다
     - 지정한 시간동안 TCP 커넥션을 닫지 않는다
@@ -79,7 +78,7 @@ toc_sticky: false
     - 파싱, 전송속도 증가 / 오류발생 가능성 낮춤
 - 한번의 요청만으로 모든 데이터를 전송
     - 응답은 순서에 상관없이 스트림으로 주고받음
-    - http1.1의 `Pipelining`과 `Connection Keep-alive`을 개선
+    - http1.1의 `Pipelining`과 `Persistent Connection`을 개선
 
 ### Stream Prioritization
 
@@ -115,10 +114,23 @@ toc_sticky: false
 - 따라서 HTTP3은 이를 개선하기 위해 UDP 프로토콜(QUIC)을 사용
 - 매우 빠른 속도로 유튜브 및 여러 CDN 서비스에서 사용됨
 
-### 장점
+### UDP Header
+
+- 무거운 TCP 헤더와 달리 UDP 헤더는 매우 가벼운 구조
+    - 데이터 전송에만 집중된 프로토콜이기 때문
+- 필요한 기능을 직접 헤더로 구현할 수 있음
+
+### No 3-way Handshake
+
+![image](https://user-images.githubusercontent.com/71180414/162666441-def876a7-50cc-4dc9-b7cb-5a2447e9b71c.png){:style="width=50%"}
 
 - UDP 기반이므로 3-way Handshake와 같은 과정이 없고, 이는 RTT 단축으로 이어짐
-- HTTP2와 같이 멀티플렉싱을 지원하여 HOLB가 없음
+- 첫 연결 설정에서 필요한 정보와 함께 데이터를 전송하고, 이런 정보를 캐싱
+- Connection UUID라는 식별자를 통해 커넥션 정보를 저장해 연결을 유지
+
+### 향상된 Multiplexing
+
+- 스트림을 독립적으로 유지하여 TCP Multiplexing의 HOLB 문제 해결
 
 <br>
 
