--- a/_posts/study/CS/2022-01-26-11.md
+++ b/_posts/study/CS/2022-01-26-11.md
@@ -39,6 +39,14 @@ HTTPS에 대해 알아보자
 
 <image width="500" src="https://user-images.githubusercontent.com/71180414/151098911-60338d51-a052-49b9-a6ba-92702633a7b3.png"/>
 
+1. 사이트는 공개키와 개인키를 만들고, CA에 자신의 정보와 공개키 관리를 요청
+2. CA는 사이트의 정보를 검증하고 CA의 개인키로 제출한 정보를 암호화해서 인증서를 만들고 서버에 전달
+3. CA는 웹 브라우저에게 자신의 공개키를 제공
+4. 사용자가 사이트에 접속하면 사이트는 인증서를 사용자에게 보냄
+5. 웹 브라우저는 미리 알고 있던 인증기관의 공개키로 인증서를 해독
+6. 이렇게 얻은 사이트의 공개키로 대칭키를 암호화해서 다시 사이트에 보냄
+7. 사이트는 개인키로 암호문을 해독하고 대칭키를 얻음
+8. 앞으로 양쪽에서 대칭키로 암,복호화하며 통신
 
 ### 통신방법
 
