--- a/_posts/study/CS/2022-01-26-12.md
+++ b/_posts/study/CS/2022-01-26-12.md
@@ -105,4 +105,18 @@ toc_sticky: false
 - 파일확장자(.포함된것)는 제외한다
     - HTTP 헤더를 사용한다
 
+### URI vs URL 
+
+![image](https://user-images.githubusercontent.com/71180414/163184497-9986f825-3818-40fd-a695-e42ed9c286b3.png)
+
+- URI (Uniform Resource Identifier)
+    - 웹에서 사용하는 논리적/물리적 리소스를 구별하는 식별자
+- URL (Uniform Resource Locator)
+    - 웹에서 사용하는 리소스의 위치를 나타내는 URI의 서브셋 (웹주소)
+    - 리소스의 위치를 정확하게 표현해야함!
+
+![image](https://user-images.githubusercontent.com/71180414/163184951-f5e7e443-1162-4997-b2e3-b979653adac5.png)
+
+
+
 <br>
