--- a/_posts/study/CS/2022-01-28-14.md
+++ b/_posts/study/CS/2022-01-28-14.md
@@ -75,14 +75,19 @@ toc_sticky: false
 - 접속시마다 세션을 발급하고, 계속 관리해함
     - 동접자가 많아질수록 서버에 과부하를 일으킴
 
-### Session Cluster
+### 세션 분리
 
 - 만약 세션정보를 서버 인메모리로 관리한다고 했을때 서버를 껐다 키면?
     - 사용자의 세션정보는 브라우저 쿠키에 저장되어 있지만...
     - 서버에서 해당 세션이 유실되어서 다시 발급해야함
-- 따라서 세션저장소의 위치를 서버와 분리하는 것이 Session Cluster 방식
-    - 세션을 인메모리가 아닌 외부 스토리지에 저장한다 (보통 가벼운 인메모리 DB를 사용)
-    - Sticky Connection(동일한 사용자가 발생시킨 요청은 동일한 WAS에서 처리됨을 보장) 제약에서 자유로움
+- 세션 저장소의 위치를 서버와 분리에 외부에 둠
+    - 세션을 인메모리가 아닌 외부 스토리지에 저장한다 (보통 가벼운 인메모리 DB를 사용. Redis)
+
+### Session Cluster
+
+- 세션 저장소가 만약 하나라면 해당 저장소에 문제가 발생했을 때 모든 세션이 날아가게됨
+    - 따라서 세션 저장소를 물리적으로 여러개 두고, 모두가 동일한 상태를 유지하도록 함 (일관성)
+- Sticky Connection(동일한 사용자가 발생시킨 요청은 동일한 WAS에서 처리됨을 보장) 제약에서 자유로움
 
 <br>
 
