--- a/_posts/study/CS/2022-01-27-13.md
+++ b/_posts/study/CS/2022-01-27-13.md
@@ -70,3 +70,9 @@ CORS에 대해 알아보자
 - 서버와 서버간 통신은 CORS 에러가 발생하지 않는다 (ex. 포스트맨에서는 로컬호스트 서버에서 보내기때문에 발생하지 않음)
 
 <br>
+
+## 참고링크
+
+- https://evan-moon.github.io/2020/05/21/about-cors/
+
+<br>
