--- a/_posts/study/CS/2022-01-27-13.md
+++ b/_posts/study/CS/2022-01-27-13.md
@@ -25,6 +25,8 @@ CORS에 대해 알아보자
 - 브라우저는 동일 출처 정책(SOP : Same Origin Policy)을 준수한다.
     - 현재 사이트의 origin과 요청하는 곳의 origin이 다를 경우 통신을 막음
     - XSS나 CSRF 등의 공격을 방어하기 위함
+        - XSS(Cross-Site Scripting) : 클라이언트에 스크립트를 삽입하여 공격
+        - CSRF(Cross-Site Request Forgery) : 인증된 사용자 정보를 가로채 다른 사이트에서 사용하는것
     - 외부 리소스를 사용하기 위한 SOP의 예외 조항이 CORS
 
 <br>
