--- a/_posts/study/CS/2022-02-09-18.md
+++ b/_posts/study/CS/2022-02-09-18.md
@@ -12,7 +12,6 @@ toc_sticky: false
 
 데이터베이스 분리 전략에 대해 알아보자
 
-
 ## Partitioning
 
 - DB 규모가 커지면 용량의 한계와 성능 저하가 일어나게 되므로, 테이블 규모를 작은 단위로 나누는 기법
@@ -33,7 +32,6 @@ toc_sticky: false
 - 한 테이블의 특정 컬럼을 쪼개는 방식
     - 자주 사용되는 컬럼을 분리시켜 성능 향상 가능
 
-
 ### 수평(horizontal) 파티셔닝
 
 ![image](https://user-images.githubusercontent.com/71180414/152910528-e6eb4257-4038-4e65-9249-07170224806d.png)
@@ -45,9 +43,20 @@ toc_sticky: false
 
 <br>
 
+## Clustering
+
+![image](https://user-images.githubusercontent.com/71180414/163518842-5769086b-f94e-4495-ba47-2aa29b7eae3e.png)
+
+- 하나의 DB를 여러개의 서버가 나눠 처리하도록 함
+    - 실제 저장되는 스토리지는 하나임
+- 하나의 서버가 죽어도 대비가 가능함. 
+- 병렬처리 및 성능향상
+
+<br>
+
 ## Replication
 
-![image](https://user-images.githubusercontent.com/71180414/152914795-f1795561-8324-43cb-917d-1f39804e8923.png)
+![image](https://user-images.githubusercontent.com/71180414/163518823-59deb55e-d10b-487e-8347-2e80bb20d51d.png)
 
 - 여러개의 DB를 권한에 따라 수직적 구조로 구축하는 방식
 - Master / Slave 패턴으로 불린다
@@ -56,6 +65,9 @@ toc_sticky: false
 - 무결성 검사 없이 비동기 방식으로 데이터를 동기화함
 
 ### 동작원리
+
+![image](https://user-images.githubusercontent.com/71180414/152914795-f1795561-8324-43cb-917d-1f39804e8923.png)
+
 
 1. Master 노드에 쓰기 트랜잭션이 수행된다.
 2. Master 노드는 데이터를 저장하고 트랜잭션에 대한 로그를 파일에 기록한다.(BIN LOG)
