--- a/_posts/study/CS/2022-02-03-15.md
+++ b/_posts/study/CS/2022-02-03-15.md
@@ -85,6 +85,7 @@ toc_sticky: false
 ## DNS(Domain Name System)
 
 - 도메인(호스트) 주소를 IP주소로 변환하는 시스템
+- UDP로 통신함 -> 빠른 속도, 가벼운 헤더가 더 중요하기 때문
 - DHCP 프로토콜 사용
 - 53번 포트 사용
 
