--- a/_posts/study/CS/2022-02-08-17.md
+++ b/_posts/study/CS/2022-02-08-17.md
@@ -14,8 +14,8 @@ toc_sticky: false
 
 ## RDB
 
-- RDB(Relataional DataBase) : 관계형 데이터베이스
-- RDBMS(Relataional DataBase Management System) : 관계형 데이터베이스 관리 시스템
+- RDB(Relataional DataBase) : 관계형 데이터베이스 관리 시스템
+- RDBMS(Relataional DataBase Management System) : 관계형 데이터베이스
     - 둘 다 비슷한 뜻임
 - 관계형 데이터 모델에 기초를 둔 데이터베이스
     - 현실의 데이터를 관계라는 개념을 사용해 표현
@@ -39,17 +39,36 @@ toc_sticky: false
 ### DDL (Data Definaition Language)
 
 - 데이터 포맷을 정의하는 언어
-- CREATE, DROP, ALTER
+- CREATE, DROP, ALTER, TRUNCATE(DELETE ALL)
 
 ### DML (Data Manipulation Language)
 
 - 데이터의 CRUD를 수행하는 언어
-- SELECT, INSERT, UPDATE, DELETE(TRUNCATE)
+- SELECT, INSERT, UPDATE, DELETE
 
 ### DCL (Data Control Language) 
 
 - DB의 접근 권한을 부여하는 명령어
 - GRANT, REVOKE
+
+<br>
+
+## Key
+
+### 기본 종류
+
+- 후보키 (Candidate Key)
+- 기본키 
+- 대체키
+- 외래키
+- 슈퍼키
+
+### MySQL
+
+- Primary Key
+- Foreign Key
+- Unique Key
+- index key
 
 <br>
 
