--- a/_posts/study/CS/2022-02-09-18.md
+++ b/_posts/study/CS/2022-02-09-18.md
@@ -36,7 +36,6 @@ toc_sticky: false
 
 ![image](https://user-images.githubusercontent.com/71180414/152910528-e6eb4257-4038-4e65-9249-07170224806d.png)
 
-- 샤딩(Sharding)과 같은 의미
 - 스키마가 동일한 테이블을 여러개로 분리하는 방식
     - 인덱스 크기를 줄인다 -> 조회 성능 향상
     - 작업 동시성 성능 향상
@@ -68,7 +67,6 @@ toc_sticky: false
 
 ![image](https://user-images.githubusercontent.com/71180414/152914795-f1795561-8324-43cb-917d-1f39804e8923.png)
 
-
 1. Master 노드에 쓰기 트랜잭션이 수행된다.
 2. Master 노드는 데이터를 저장하고 트랜잭션에 대한 로그를 파일에 기록한다.(BIN LOG)
 3. Slave 노드의 IO Thread는 Master 노드의 로그 파일(BIN LOG)를 파일(Replay Log)에 복사한다.
@@ -82,5 +80,13 @@ toc_sticky: false
 - **단점**
     - Master 노드에 문제 발생시 복구 및 대처 어려움
     - 노드 간 데이터 동기화가 보장되지 않아 일관성있는 데이터 보장 X
+
+<br>
+
+## Sharding
+
+- 분산된 테이블과 DB의 조회/저장 처리를 적절히 분산시키는게 중요
+    - Hash Sharding : 
+    - Dynamic Sharding
 
 <br>
