--- a/_posts/study/CS/2022-02-10-19.md
+++ b/_posts/study/CS/2022-02-10-19.md
@@ -14,7 +14,7 @@ toc_sticky: false
 
 ## 이상현상 (Anomaly)
 
-- 테이블 내 데이터들이 불필요하게 중복되어 발생하는 데이터 불일치 현상
+- 테이블 내 데이터들이 불필요하게 중복되어 발생하는 데이터 불일치 현상 (데이터 무결성 유지)
 - 종류
     - 삽입 이상 : 불필요한 데이터까지 함께 삽입해야 하는 문제
     - 삭제 이상 : 특정 컬럼 데이터를 삭제하고 싶어도 모든 행을 삭제해야하는 문제
