--- a/_posts/study/CS/2022-03-02-30.md
+++ b/_posts/study/CS/2022-03-02-30.md
@@ -59,6 +59,7 @@ try(
 
 - DB정보를 가지고 자동으로 커넥션을 생성해주는 DataSource가 있다
     - 커넥션들을 미리 만들어 놓는 커넥션 풀을 관리한다.
+    - SpringBoot 2.0 이전엔 default로 tomcat-jdbc를 사용했고, 이후엔 HikariCP를 사용함
 - 쿼리문을 실행시켜주는 JdbcTemplate이 있다
     - DataSource Bean을 주입받아 사용
     - 쿼리문을 더 쉽게 생성할 수 있는 NamedParameterJdbcTemplate도 있음
