--- a/_posts/study/CS/2022-02-26-28.md
+++ b/_posts/study/CS/2022-02-26-28.md
@@ -45,6 +45,7 @@ List<Integer> al = new ArrayList<>();
 - 두 컬렉션의 차이점
     - Vector는 synchronized로 동기화되어 thread safe하므로, ArrayList의 성능이 더 좋음
     - Vector는 배열 증가시 기존배열의 2배로 증가하고, ArrayList는 1.5배로 증가함
+    - default capacity는 10
 - 정리
     - 장점 : 배열 사용으로 데이터 접근 속도가 빠름 -> O(1)
     - 단점 : 중간 데이터 추가/삭제시 내부 배열 복사가 일어나 비효율적 -> O(n)
@@ -58,6 +59,7 @@ List<Integer> ll = new LinkedList<>();
 - 내부적으로 노드를 연결한 구조로 되어있음
     - 각 노드는 데이터와 다음 노드 주소를 저장
     - 단방향으로 노드들이 연결되므로 이전 노드 접근은 안됨
+    - **But!!!** 자바의 LinkedList는 내부적으로 이중연결리스트로 구현되어있음
 - 정리
     - 장점 : 중간 데이터 추가/삭제시 시간이 빠름 -> O(1)
     - 단점 : 인덱스가 없으므로 데이터 접근 시간이 느림 -> O(n)
@@ -102,7 +104,7 @@ Map<Integer> hm = new HashMap<>();
         - 데이터 추가/삭제시 해시코드 재정렬이 필요함
     - **분리연결법**
         - 연결리스트나 트리 같은 자료구조를 사용하여 다음 노드를 추가하는 방식
-        - 해시코드 탐색시 O(n)
+        - 해시코드 탐색시 O(1) + 리스트에서 탐색시 O(n)
         - 메모리를 많이 소비함
 - 두 컬렉션의 차이점
     - Hashtable는 synchronized로 동기화되어 thread safe하므로, HashMap이 더 빠르다.
