--- a/_posts/study/CS/2022-02-17-23.md
+++ b/_posts/study/CS/2022-02-17-23.md
@@ -228,6 +228,9 @@ public static void reculsive(int[] arr, int left, int right){
     - 불안정 정렬임
     - pivot이 랜덤하게 선정되기에 데이터 분포에 영향받음
 
+<img width="600" src="https://user-images.githubusercontent.com/71180414/164376499-d8892bb6-87f3-4d0d-9f8b-3ba8c938cd5a.png">
+
+
 ```java
 public static int[] quickSort(int[] arr){
 
