--- a/_posts/study/CS/2022-04-20-34.md
+++ b/_posts/study/CS/2022-04-20-34.md
@@ -1,5 +1,5 @@
 ---
-title:  "[기타] 상식"
+title:  "[기타] 개발상식"
 date: 2022-04-20
 categories:
   - CS
@@ -12,9 +12,6 @@ toc_sticky: false
 
 여러가지 개발 상식 계속 정리하기
 
-# 기타주제
-
-<br>
 
 ## POJO
 
@@ -186,7 +183,7 @@ public class AsyncConfig extends AsyncConfigurerSupport {
 - 자식 프로세스 내부에서 요청을 Event-Driven 방식을 사용해 비동기적으로 처리함
     - 빨리 끝나는 작업 먼저 처리
     - I/O 작업은 스레드풀로 이동시켜 처리함
-- 동시 접속에 유리함
+- 요청을 비동기로 처리하기 때문에 동시 접속에 상황에 유리함
 
 <br>
 
