--- a/_posts/study/CS/2022-02-17-23.md
+++ b/_posts/study/CS/2022-02-17-23.md
@@ -26,7 +26,7 @@ toc_sticky: false
 ### 불안정정렬
 
 - 중복된 값이 존재할때 입력순서와 동일하지 않게 정렬됨
-- 선택정렬, 퀵정렬
+- 선택정렬, 퀵정렬, 힙정렬
 
 <br>
 
@@ -272,6 +272,8 @@ public static void reculsive(int[] arr, int left, int right){
 <br>
 
 ## 힙 정렬 (Heap sort)
+
+- 불안정 + 제자리정렬
 
 ```java
 public static void swap(int[] arr, int a, int b) {
