--- a/_posts/study/CS/2022-02-22-25.md
+++ b/_posts/study/CS/2022-02-22-25.md
@@ -55,7 +55,7 @@ toc_sticky: false
 - **의존 역전 원칙**
     - DIP(Dependency inversion principle)
     - 상위 모듈이 하위 모듈의 구현에 의존해서는 안된다.
-    - 상위 객체가 하위 객체가 변경된다해서 코드를 고치면 안됨(OSP 위반)
+    - 상위 객체가 하위 객체가 변경된다해서 코드를 고치면 안됨(OCP 위반)
     - ex) `자동차 - 스노우타이어` => `자동차 - (스노우타이어, ...)타이어`
 - 결합도를 낮추고 응집도를 높히는 것이 원칙
 
@@ -99,7 +99,7 @@ toc_sticky: false
 - 문제를 작은 문제로 나누고, 작은 문제를 해결하는 순수함수를 사용하는 방식
     - 순수함수는 상태값을 가지지 않고 외부 의존성을 가지지 않는다 (side effect가 없음)
     - 프로그램 실행에 영향을 미치는 영역과 미치지 않는 영역을 분리할 수 있다.
-    - 함수를 변수처럼 사용할 수 있어야한다 (lambda)
+    - 함수를 변수처럼 일급객체로 사용할 수 있어야한다 (lambda)
 - 장점
     - 높은 재사용성, 가독성, 유지보수성
 - 단점
