--- a/_posts/study/CS/2022-02-23-26.md
+++ b/_posts/study/CS/2022-02-23-26.md
@@ -34,9 +34,41 @@ toc_sticky: false
 
 <br>
 
-## JVM 
+## Java 버전
 
-- 4가지 영역으로 구분된다
+- 8, 11, 17 버전은 LTS(Long Term Support) 버전이다.
+
+### Java 8 특징
+
+- Lambda
+- Functional interface
+- Default method
+- Stream
+- Optional
+- 새롭게 추가된 날짜 API
+    - 이전에는 날짜 계산이 쉽지 않았음
+    - LocalDate, LocalTime, LocalDateTime
+- CompletableFuture
+- JVM의 변화
+    - Heap영역에 저장되던 PermGen 영역을 native 영역으로 이동
+
+### Java 11 특징
+
+- String 관련 메소드 추가
+- File 관련 메소드 추가
+- Predicate, static not 메소드 추가
+- java 실행 (javac로 컴파일x)
+- garbage collector 추가
+
+### ~17 특징
+
+- switch문 확장(12)
+- instanceof 강화(16)
+- Record(16)
+
+<br>
+
+## Java 동작원리
 
 ### Class Loader 
 
@@ -69,8 +101,60 @@ toc_sticky: false
 - 실행방법에는 두가지가 있음
     - **인터프리터** : 바이트코드를 하나씩 읽어서 실행 (느림, 초기에 사용)
     - **JIT**(Just-In Time Compiler) : 바이트코드 전체를 바이너리 코드로 컴파일 후 실행 (빠름)
+- 자바는 어떻게 동작하나?
+    - 처음엔 인터프리터 방식으로 바이트코드 -> 바이너리로 변환해 실행
+    - 해당 코드는 JIT에서 캐싱하고, 중복 코드 발생시 인터프리터가 동작하지 않고 JIT가 바로 캐싱코드를 사용
+    - JIT는 인터프리터 방식을 보조한다고 생각하면 됨
 
-### Garbage Collector
+### Java 컴파일과정
+
+![image](https://user-images.githubusercontent.com/71180414/155256855-8964f417-10a7-4c0c-a8ab-80b6adf70346.png)
+
+- 다른 컴파일 언어는 컴파일러가 OS에 종속적이지만, Java는 모든 OS에서 동일한 Java 컴파일러를 가진다
+    - 동일하게 컴파일된 바이트 코드를 각 OS별 JVM에서 번역을 해주는 방식
+- 컴파일 순서
+    1. java 코드 작성
+    2. 컴파일러(`javac`)가 java 파일을 컴파일 
+        - 바이트 코드(`.class`) 생성
+    3. 바이트코드를 Class Loader에 올림
+    4. 클래스를 Runtime Data Area에 올림
+    5. Execution Engine이 JVM 메모리에 올라온 바이트 코드를 실행
+
+<br>
+
+## 컴파일 언어 vs 인터프리터 언어
+
+### 컴파일 언어
+
+- 실행 전 빌드과정을 거친다.
+    - 고급언어를 컴파일하여 모두 기계어(바이너리)로 변환한다
+- 장점
+    - 실행 속도가 빠르다
+    - 디버깅이 쉽다
+- 단점
+    - 실행 전 빌드시간이 필수적으로 소요된다
+
+### 인터프리터 언어
+
+- 스크립트 언어라고도 함
+- 실행 전 빌드과정없이 고급언어를 인터프리터가 한줄씩 실시간으로 해석하여 실행한다.
+- 장점
+    - 빌드시간이 필요하지 않다.
+    - 수정 후 바로 재시작하면 되기에 개발속도가 빠르다
+- 단점
+    - 실행 속도가 느리다
+    - 코드의 오류 인지 시점이 늦고 디버깅이 힘들다
+
+### 자바는?
+
+- 컴파일과 인터프리터 방식을 둘다 사용
+    - 소스코드와 기계어 사이의 `.class`(바이트 코드)가 존재
+    - 컴파일 : 소스코드 -> 바이트 코드
+    - 인터프리터 : 바이트 코드 -> 바이너리 코드
+
+<br>
+
+## Garbage Collector
 
 ![image](https://user-images.githubusercontent.com/71180414/155263019-bc49c7ec-1a2d-4a32-9c4a-4900f71dd3a4.png)
 
@@ -96,81 +180,5 @@ toc_sticky: false
         - Minor GC보다 10배의 시간이 소요되며, 다른 스레드를 중단시킴
         1. Old 영역에 메모리가 가득차면 GC 실행
         2. 참조되지 않는 객체를 한번에 모아서 제거
-
-<br>
-
-## Java 컴파일과정
-
-![image](https://user-images.githubusercontent.com/71180414/155256855-8964f417-10a7-4c0c-a8ab-80b6adf70346.png)
-
-
-- 다른 컴파일 언어는 컴파일러가 OS에 종속적이지만, Java는 모든 OS에서 동일한 Java 컴파일러를 가진다
-    - 동일하게 컴파일된 바이트 코드를 각 OS별 JVM에서 번역을 해주는 방식
-- 컴파일 순서
-    1. java 코드 작성
-    2. 컴파일러(`javac`)가 java 파일을 컴파일 
-        - 바이트 코드(`.class`) 생성
-    3. 바이트코드를 Class Loader에 올림
-    4. 클래스를 Runtime Data Area에 올림
-    5. Execution Engine이 JVM 메모리에 올라온 바이트 코드를 실행
-       
-<br>
-
-## 컴파일 언어 vs 인터프리터 언어
-
-### 컴파일 언어
-
-- 실행 전 빌드과정을 거친다.
-    - 고급언어를 컴파일하여 모두 기계어(바이트코드)로 변환한다
-- 장점
-    - 실행 속도가 빠르다
-    - 디버깅이 쉽다
-- 단점
-    - 실행 전 빌드시간이 필수적으로 소요된다
-
-### 인터프리터 언어
-
-- 스크립트 언어라고도 함
-- 실행 전 빌드과정없이 고급언어를 인터프리터가 한줄씩 실시간으로 해석하여 실행한다.
-- 장점
-    - 빌드시간이 필요하지 않다.
-    - 수정 후 바로 재시작하면 되기에 개발속도가 빠르다
-- 단점
-    - 실행 속도가 느리다
-    - 코드의 오류 인지 시점이 늦고 디버깅이 힘들다
-
-<br>
-
-## Java 8, Java 11
-
-- 8, 11, 17 버전은 LTS(Long Term Support) 버전이다.
-
-### Java 8 특징
-
-- Lambda
-- Functional interface
-- Default method
-- Stream
-- Optional
-- 새롭게 추가된 날짜 API
-    - 이전에는 날짜 계산이 쉽지 않았음
-    - LocalDate, LocalTime, LocalDateTime
-- CompletableFuture
-- JVM의 변화
-    - Heap영역에 저장되던 PermGen 영역을 native 영역으로 이동
-
-### Java 11 특징
-
-- String 관련 메소드 추가
-- File 관련 메소드 추가
-- Predicate, static not 메소드 추가
-- java 실행 (javac로 컴파일x)
-- garbage collector 추가
-
-### ~17 특징
-
-- switch문 확장(12)
-- instanceof 강화(16)
-- Record(16)
-
+    
 <br>
